--- a/estilo.css
+++ b/estilo.css
@@ -38,3 +38,20 @@ width: 100%;
     background: linear-gradient(180deg, rgba(217, 217, 217, 0) 0%, #0097D8 100%);
 
 }
+
+.mundo{
+    position: absolute;
+    width: 846px;
+    height: 34px;
+    left: 324px;
+    top: 54px;
+    
+    font-family: 'IM FELL English';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 38px;
+    line-height: 48px;
+    
+    color: #00D1FF;
+
+}
