--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 .cabeçalho{
     position: absolute;
-width: 1440px;
+width: 100%;
 height: 243px;
 left: 0px;
 top: 0px;
@@ -10,7 +10,7 @@ background: linear-gradient(180deg, #0097D8 0%, rgba(217, 217, 217, 0) 100%);
 
 .cabeçalho-img{
     position: absolute;
-width: 1440px;
+width: 100%;
 height: 243px;
 left: 0px;
 top: 0px;
@@ -19,7 +19,7 @@ width: 100%;
 
 .corpo{
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 569px;
     left: 0px;
     top: 243px;
@@ -30,7 +30,7 @@ width: 100%;
 
 .fim{
     position: absolute;
-    width: 1440px;
+    width: 100%;
     height: 215px;
     left: 0px;
     top: 812px;
@@ -52,6 +52,6 @@ width: 100%;
     font-size: 38px;
     line-height: 48px;
     
-    color: #00D1FF;
+    color: #06404D;
 
 }
