--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@ height: 243px;
 left: 0px;
 top: 0px;
 
-background: linear-gradient(180deg, #0097D8 0%, rgba(217, 217, 217, 0) 100%);
+background: linear-gradient(180deg, #E78752 2.08%, #0097D8 55.73%, rgba(217, 217, 217, 0.00) 100%);
 }
 
 .cabeçalho-img{
