--- a/estilo.css
+++ b/estilo.css
@@ -55,3 +55,14 @@ width: 100%;
     color: #06404D;
 
 }
+
+.sorvete{
+    display: flex;
+    width: 1440px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    
+    background: #FFF;
+
+}
