--- a/estilo.css
+++ b/estilo.css
@@ -58,11 +58,11 @@ width: 100%;
 
 .sorvete{
     display: flex;
-    width: 1440px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    
-    background: #FFF;
-
+width: 290px;
+height: 35px;
+flex-direction: column;
+flex-shrink: 0;
+color: #FFFAFA;
+font-size: 40px;
+font-family: IM FELL English;
 }
